[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt_derived_fields"
dynamic = ["version"]
description = "Derived fields for yt"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anatole Storck", email = "storckanatole@gmail.com" },
    { name = "Corentin Cadiou", email = "corentin.cadiou@iap.fr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "yt>=4.3.0",
    "yt_experiments>=0.3.0",
    "roman",
    "pyneb",
    "ChiantiPy",
    "scipy",
    "joblib",
    "numpy",
    "unyt",
    "numexpr",
    "pooch",
]


[project.urls]
Homepage = "https://github.com/AnatoleStorck/yt_derived_fields"

[tool.hatch.version]
path = "yt_derived_fields/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/yt_derived_fields",
]
[tool.hatch.build.targets.wheel]
packages = [
    "yt_derived_fields",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["N802", "N803", "N806", "C901", "UP007"]
select = ["E", "C", "F", "UP", "B", "A", "YTT", "S", "N"]

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["yt_derived_fields"]
known-third-party = [
  "numpy",
  "matplotlib",
  "yt",
  "unyt",
]
